@startuml

'Rectilinear layout :
skinparam linetype ortho

entity Machine {
* id: int
___
idPosteDeTravail:int
idEtatMachine: int
reference: varchar
description: text
puissance: double
coutHoraire: double
}

entity Type0peration{
* id: int
___
description: text
}

entity Produit {
* id: int
___
idGamme : int
___
reference: varchar
description: text
}

entity Machine_TypeOperation {
* idMachine: int
* idTypeOperation : int
___
duree: double
}

Machine <-- Machine_TypeOperation
Type0peration <-- Machine_TypeOperation

entity Gamme {
* id : int
___
reference: varchar
description: text
}

Produit --> Gamme : plan de fabrication

entity Operation {
* id: int
___
idTypeOperation : int
___
}

Operation --> Type0peration

entity Gamme_Operation {
*idOperation: int
*idGamme: int
}

Operation <-- Gamme_Operation
Gamme <-- Gamme_Operation

entity Operation_Ordre {
*idOperationAmont: int
*idOperationAval: int
}

Operation_Ordre --> Operation
Operation_Ordre --> Operation

entity Exemplaire {
* id: int
___
idProduit: int
___
reference: varchar
numeroDeSerie: varchar
}

Produit <-- Exemplaire

entity OperationEffectuee {
* id: int
___
idOperation: int
idMachine: int
idExemplaire: int
___
debutOperation: double
finOperation: double
}

Operation <-- OperationEffectuee
OperationEffectuee --> Machine
OperationEffectuee --> Exemplaire

entity PosteDeTravail {
*id: int
___
description:text
positionX: int
positionY: int
}

entity Operateur {
* id: int
___
idEtatOperateur: int
___
nom: varchar
prenom: varchar
}

entity Operateur_PosteDeTravail_Habilitation {
*idOperateur: int
*idPosteDeTravail: int
}

entity Operateur_PosteDeTravail_Affectation {
*idOperateur: int
*idPosteDeTravail: int
}

Operateur <--Operateur_PosteDeTravail_Habilitation
PosteDeTravail <-- Operateur_PosteDeTravail

Operateur <--Operateur_PosteDeTravail_Affectation
PosteDeTravail <-- Operateur_PosteDeTravail

PosteDeTravail <-- Machine

entity EtatMachine {
* id: int
___
nom: varchar
}

EtatMachine <-- Machine

entity EtatOperateur {
* id: int
nom: varchar
}

EtatOperateur <-- Operateur


@enduml